# libffwd-cancer-integrator

./: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.old  README  README.md  TODO  configure  configure.ac  configure.ac_hello  energy-checksum.cpp  five-stage-characteristic.cpp  five_stage  flying-conjugates.cpp  flying-conjugates.hpp  gillespie-algorithm.cpp  gillespie-algorithm.hpp  gillespie-sampler.cpp  graph-model-spec.cpp  graph-model-spec.hpp  likelihood-unit-test.cpp  max-likelihood.hpp  missing  thread-test.cpp  ts-loss-characteristic-errors.cpp  ts-loss-characteristic.cpp  ts-loss-gillespie.cpp  tstester.sh  two-hit-characteristic.cpp  two-hit-gillespie.cpp  two-hit.cpp
documentation/: Makefile  TODO  documentation.tex  references.bib
documentation/figures/: TSloss.dot  flowcube.nb  threestep.dot
include/: fast-forward.hpp  gillespie-algorithm.hpp  graph-model-spec.hpp
parameter_inference/: annealing.c  annealing.h  gillespie-sampler.cpp  guesser  likelihood-optimisation.cpp
scripts/: postprocessing.sh  postprocessing_rmse.sh  tstester.sh
src/: run_unit_tests.sh  ts-loss-tau
src/core/: README.md  TODO  binding.cpp  debugbindding.cpp  debugsetup.py  debugtest.py  fast-forward.cpp  fast-forward.hpp  flying-conjugates.cpp  flying-conjugates.hpp  gillespie-algorithm.cpp  gillespie-algorithm.hpp  graph-model-spec.cpp  graph-model-spec.hpp  h_step.cpp  max-likelihood.hpp  pyffwd.cpp  pyffwdsetup.py  pyffwdtest.py  setup.py  test_heun_q_step  testbinding.py
src/errors/: TODO  c++_gillespie-errors  gillespie-errors  gillespie-errors.cpp  ts-loss-characteristic-errors.cpp
src/inference/: exclude_functions.py  find.py  gillespie-sampler.cpp  graph.sed  guesser-argparse.hpp  inference.hpp  inference_note.txt  likelihood-optimisation.cpp  likelihood-optimisation.cpp.orig  likelihood-optimisation.hpp  link.dot  offsets.py
src/inference/parsers/: chatgpt.cpp  claude.cpp  claude2.cpp  claude6.cpp
src/python/: .gitignore  API_GUIDE.md  Pipfile  pyffwd.cpp  pyffwdsetup.py  pyffwdtest.py
src/python/Test/: c++_gillespie-sampler.txt  c++_likelihood-unit-test.txt  c++_ts-loss-characteristic-errors.txt  c++_ts-loss-gillespie-poly.txt  c++_ts-loss-gillespie.txt  c++_two-hit-characteristic.txt  c++_two-hit-gillespie.txt  five-stage-characteristic.py  five_stage.py  gillespie-errors.py  gillespie-sampler.py  gillespie_sampler.py  likelihood-unit-test.py  python_five_stage.txt  python_gillespie-errors.txt  python_gillespie_sampler.txt  python_likelihood-unit-test  python_likelihood-unit-test.txt  python_ts-loss-characteristic-errors.txt  python_ts-loss-characteristic.txt  python_ts-loss-gillespie-poly.txt  python_two_hit_characteristic.txt  ts-loss-characteristic-errors.py  ts-loss-characteristic.py  ts-loss-gillespie-poly.py  ts-loss-gillespie.py  ts-loss-tau.py  two-hit-gillespie.py  two_hit_characteristic.py
src/python/pyffwd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/python/tests/: likelihood-unit-test.py  two-hit-gillespie.py
src/tests/: .gitignore  five-stage-characteristic.cpp  gillespie-sampler.cpp  likelihood-unit-test.cpp  max-likelihood.hpp  modeltest.cpp  one-hit.cpp  run_unit_tests.sh  ts-loss-characteristic.cpp  ts-loss-gillespie-poly.cpp  ts-loss-gillespie.cpp  ts-loss-tau.cpp  two-hit-characteristic.cpp  two-hit-gillespie.cpp
